added more eda, updated conda env in readme, run eda for all imgs WIP

--- a/src/EDA.ipynb
+++ b/src/EDA.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -122,7 +122,7 @@
        "[35126 rows x 2 columns]"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -147,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -164,7 +164,7 @@
     "\n",
     "TODO:\n",
     "* image resolutions --> DONE (can also find median/quartiles if we want)\n",
-    "* describe pixel values/ranges --> takes too long, ~20min\n",
+    "* describe pixel values/ranges --> max values, run for whole set (~20min)\n",
     "* split into train/val/test (70/10/20%) but ensure right/left images do not leak across train/val/test\n",
     "* normalize/preproc?\n"
    ]
@@ -178,17 +178,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "min size: [400 289]\n",
-      "max size: [5184 3456]\n",
-      "mean size: [3636.65524113 2473.03316632]\n",
-      "std size: [801.81875595 471.46775397]\n"
+      "0 of 35126\n"
      ]
     }
    ],
@@ -197,16 +194,57 @@
     "import numpy as np\n",
     "\n",
     "dims = []\n",
+    "pixels = []\n",
     "\n",
-    "for i in img_files:\n",
+    "for count, i in enumerate(img_files[:100]):\n",
     "    img = Image.open(os.path.join(data_folder, i))\n",
     "    dims.append(img.size)\n",
+    "    pixels.append(img.getextrema())\n",
     "\n",
-    "dims = np.array(dims)\n",
+    "    if count % 1000 == 0:\n",
+    "        print(count, 'of', len(img_files))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "dims:\n",
+      "min size: [400 315]\n",
+      "max size: [4928 3264]\n",
+      "mean size: [3419.67 2339.95]\n",
+      "std size: [810.54696415 482.89593858]\n",
+      "\n",
+      "max pixel intensity (RGB):\n",
+      "min: [108  81  42]\n",
+      "max: [255 255 255]\n",
+      "mean: [244.86 223.13 178.02]\n",
+      "std: [25.61211432 36.48798569 53.09425204]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('dims:')\n",
     "print('min size:', np.min(dims, axis=0))\n",
     "print('max size:', np.max(dims, axis=0))\n",
     "print('mean size:', np.mean(dims, axis=0))\n",
-    "print('std size:', np.std(dims, axis=0))"
+    "print('std size:', np.std(dims, axis=0))\n",
+    "print()\n",
+    "\n",
+    "pixels = np.array(pixels)\n",
+    "# pixel_mins = pixels[:, :, 0] --> all 0s\n",
+    "pixel_maxs = pixels[:, :, 1]\n",
+    "\n",
+    "print(f'max pixel intensity ({img.mode}):')\n",
+    "print('min:', np.min(pixel_maxs, axis=0))\n",
+    "print('max:', np.max(pixel_maxs, axis=0))\n",
+    "print('mean:', np.mean(pixel_maxs, axis=0))\n",
+    "print('std:', np.std(pixel_maxs, axis=0))"
    ]
   },
   {
@@ -218,7 +256,7 @@
     "TODO:\n",
     "* nan values? --> DONE\n",
     "* label freqs --> DONE\n",
-    "* label breakdown by right vs left eye?"
+    "* label breakdown by right vs left eye? --> DONE"
    ]
   },
   {
@@ -230,7 +268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -348,7 +386,7 @@
        "[35126 rows x 3 columns]"
       ]
      },
-     "execution_count": 66,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -369,7 +407,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -381,7 +419,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 67,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -399,7 +437,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -429,6 +467,122 @@
     "print(labels['label'].value_counts().sort_index())\n",
     "print()\n",
     "print(labels['label'].value_counts(normalize=True).sort_index())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "see how similar labels are for left vs right eyes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "left eye\n",
+      "label\n",
+      "0-No DR               12871\n",
+      "1-Mild                 1212\n",
+      "2-Moderate             2702\n",
+      "3-Severe                425\n",
+      "4-Proliferative DR      353\n",
+      "Name: count, dtype: int64\n",
+      "\n",
+      "label\n",
+      "0-No DR               0.732847\n",
+      "1-Mild                0.069009\n",
+      "2-Moderate            0.153846\n",
+      "3-Severe              0.024199\n",
+      "4-Proliferative DR    0.020099\n",
+      "Name: proportion, dtype: float64\n",
+      "\n",
+      "\n",
+      "right eye\n",
+      "label\n",
+      "0-No DR               12939\n",
+      "1-Mild                 1231\n",
+      "2-Moderate             2590\n",
+      "3-Severe                448\n",
+      "4-Proliferative DR      355\n",
+      "Name: count, dtype: int64\n",
+      "\n",
+      "label\n",
+      "0-No DR               0.736719\n",
+      "1-Mild                0.070091\n",
+      "2-Moderate            0.147469\n",
+      "3-Severe              0.025508\n",
+      "4-Proliferative DR    0.020213\n",
+      "Name: proportion, dtype: float64\n"
+     ]
+    }
+   ],
+   "source": [
+    "leye_labels = labels[labels['image'].str.contains('_left')]\n",
+    "reye_labels = labels[labels['image'].str.contains('_right')]\n",
+    "\n",
+    "print('left eye')\n",
+    "print(leye_labels['label'].value_counts().sort_index())\n",
+    "print()\n",
+    "print(leye_labels['label'].value_counts(normalize=True).sort_index())\n",
+    "\n",
+    "print()\n",
+    "print()\n",
+    "\n",
+    "print('right eye')\n",
+    "print(reye_labels['label'].value_counts().sort_index())\n",
+    "print()\n",
+    "print(reye_labels['label'].value_counts(normalize=True).sort_index())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "see how similar labels are for the left/right eye of the same patient"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "number of patients: 17563\n",
+      "number of patients with different eye labels: 2240\n",
+      "min diff: 1\n",
+      "max diff: 4\n",
+      "mean diff: 1.3607142857142858\n",
+      "median diff: 1.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "pts = labels['image'].str.split('_').str[0].unique()\n",
+    "\n",
+    "diff = []\n",
+    "for id in pts:\n",
+    "    leye = labels[labels['image'] == id+'_left']['level'].values\n",
+    "    reye = labels[labels['image'] == id+'_right']['level'].values\n",
+    "    if not leye == reye:\n",
+    "        diff.append(np.abs(leye - reye))\n",
+    "\n",
+    "print('number of patients:', len(pts))\n",
+    "print('number of patients with different eye labels:', len(diff))\n",
+    "print('min diff:', np.min(diff))\n",
+    "print('max diff:', np.max(diff))\n",
+    "print('mean diff:', np.mean(diff))\n",
+    "print('median diff:', np.median(diff))"
    ]
   }
  ],
