updated eda, added img_stats.npz for quick access

--- a/src/EDA.ipynb
+++ b/src/EDA.ipynb
@@ -164,7 +164,7 @@
     "\n",
     "TODO:\n",
     "* image resolutions --> DONE (can also find median/quartiles if we want)\n",
-    "* describe pixel values/ranges --> max values, run for whole set (~20min)\n",
+    "* describe pixel values/ranges --> DONE (max values)\n",
     "* split into train/val/test (70/10/20%) but ensure right/left images do not leak across train/val/test\n",
     "* normalize/preproc?\n"
    ]
@@ -173,7 +173,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "describe image size/resolution"
+    "describe image size/resolution and max pixel intensity"
    ]
   },
   {
@@ -185,7 +185,42 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0 of 35126\n"
+      "0 of 35126\n",
+      "1000 of 35126\n",
+      "2000 of 35126\n",
+      "3000 of 35126\n",
+      "4000 of 35126\n",
+      "5000 of 35126\n",
+      "6000 of 35126\n",
+      "7000 of 35126\n",
+      "8000 of 35126\n",
+      "9000 of 35126\n",
+      "10000 of 35126\n",
+      "11000 of 35126\n",
+      "12000 of 35126\n",
+      "13000 of 35126\n",
+      "14000 of 35126\n",
+      "15000 of 35126\n",
+      "16000 of 35126\n",
+      "17000 of 35126\n",
+      "18000 of 35126\n",
+      "19000 of 35126\n",
+      "20000 of 35126\n",
+      "21000 of 35126\n",
+      "22000 of 35126\n",
+      "23000 of 35126\n",
+      "24000 of 35126\n",
+      "25000 of 35126\n",
+      "26000 of 35126\n",
+      "27000 of 35126\n",
+      "28000 of 35126\n",
+      "29000 of 35126\n",
+      "30000 of 35126\n",
+      "31000 of 35126\n",
+      "32000 of 35126\n",
+      "33000 of 35126\n",
+      "34000 of 35126\n",
+      "35000 of 35126\n"
      ]
     }
    ],
@@ -196,7 +231,7 @@
     "dims = []\n",
     "pixels = []\n",
     "\n",
-    "for count, i in enumerate(img_files[:100]):\n",
+    "for count, i in enumerate(img_files):\n",
     "    img = Image.open(os.path.join(data_folder, i))\n",
     "    dims.append(img.size)\n",
     "    pixels.append(img.getextrema())\n",
@@ -209,26 +244,41 @@
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "dims = np.array(dims)\n",
+    "pixels = np.array(pixels)\n",
+    "\n",
+    "np.savez('../data/img_stats.npz', dims=dims, pixels=pixels)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "dims:\n",
-      "min size: [400 315]\n",
-      "max size: [4928 3264]\n",
-      "mean size: [3419.67 2339.95]\n",
-      "std size: [810.54696415 482.89593858]\n",
+      "min size: [400 289]\n",
+      "max size: [5184 3456]\n",
+      "mean size: [3636.65524113 2473.03316632]\n",
+      "std size: [801.81875595 471.46775397]\n",
       "\n",
       "max pixel intensity (RGB):\n",
-      "min: [108  81  42]\n",
+      "min: [12 12 11]\n",
       "max: [255 255 255]\n",
-      "mean: [244.86 223.13 178.02]\n",
-      "std: [25.61211432 36.48798569 53.09425204]\n"
+      "mean: [245.51340887 225.93053579 184.52767181]\n",
+      "std: [24.02297008 35.57556396 51.26361613]\n"
      ]
     }
    ],
    "source": [
+    "# dims = np.load('../data/img_stats.npz')['dims']\n",
+    "# pixels = np.load('../data/img_stats.npz')['pixels']\n",
+    "\n",
     "print('dims:')\n",
     "print('min size:', np.min(dims, axis=0))\n",
     "print('max size:', np.max(dims, axis=0))\n",
@@ -236,7 +286,6 @@
     "print('std size:', np.std(dims, axis=0))\n",
     "print()\n",
     "\n",
-    "pixels = np.array(pixels)\n",
     "# pixel_mins = pixels[:, :, 0] --> all 0s\n",
     "pixel_maxs = pixels[:, :, 1]\n",
     "\n",
@@ -268,7 +317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -386,7 +435,7 @@
        "[35126 rows x 3 columns]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -407,7 +456,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -419,7 +468,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -437,7 +486,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -478,7 +527,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -549,7 +598,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
