Updated data split to use SMOTE
- Also added ideas for model structure/compilation, but no changes to the actual code

--- a/src/transfer_learning.ipynb
+++ b/src/transfer_learning.ipynb
@@ -1,14 +1,14 @@
 {
  "cells": [
   {
-   "cell_type": "markdown",
+   "cell_type": "raw",
    "metadata": {},
    "source": [
     "# build dataset\n",
     "\n",
     "TODO:\n",
     "* train on whole dataset (preprocess images first since it will take too long)\n",
-    "* remove random split and split data beforehand"
+    "* remove random split and split data beforehand --> split data so as to counteract class imbalance. Moderate imbalance so use SMOTE (oversampling)"
    ]
   },
   {
@@ -33,27 +33,64 @@
     "import torch\n",
     "from torchvision import models\n",
     "from utils import DRDataset\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from imblearn.over_sampling import SMOTE\n",
+    "import numpy as np\n",
     "\n",
     "DESC = 'resnet'\n",
     "if not os.path.exists(f'../results/{DESC}'):\n",
     "    os.makedirs(f'../results/{DESC}')\n",
-    "\n",
+    "    \n",
+    "#load labels\n",
     "labels = pd.read_csv('../data/trainLabels.csv').head(100)\n",
     "\n",
     "NUM_CLASSES = len(labels['level'].unique())\n",
     "LABELS_MAP = ['0-No DR', '1-Mild', '2-Moderate', '3-Severe', '4-Proliferative DR']\n",
     "BATCH_SIZE = 32\n",
     "\n",
+    "#load dataset\n",
     "dataset = DRDataset(labels, '../data/train',\n",
     "                         preproc=models.ResNet50_Weights.DEFAULT.transforms())\n",
     "\n",
-    "# split into train/val/test\n",
-    "train_data, val_data, test_data = torch.utils.data.random_split(dataset, [0.7, 0.1, 0.2])\n",
+    "#Map labels with dataset images \n",
+    "image_paths = labels_df['image'].values  # TODO check that csv has \"image\" or update with appropriate labeling\n",
+    "labels = labels_df['level'].values       # Target labels\n",
+    "\n",
+    "# split into train/val/test using stratified sampling \n",
+    "X_train, X_test, y_train, y_test, train_idx, test_idx = train_test_split(\n",
+    "    dataset, y, np.arange(len(image_ids)), test_size=0.3, stratify=y, random_state=42)\n",
+    "\n",
+    "#train_data, val_data, test_data = torch.utils.data.random_split(dataset, [0.7, 0.1, 0.2])\n",
     "# max_workers = os.cpu_count() // 2\n",
+    "\n",
+    "# Apply SMOTE on the training labels (to balance classes)\n",
+    "smote = SMOTE(random_state=42)\n",
+    "X_train_resampled, y_train_resampled = smote.fit_resample(X_train.reshape(-1, 1), y_train)\n",
+    "\n",
+    "# Convert back to original format\n",
+    "X_train_resampled = X_train_resampled.flatten()\n",
+    "\n",
+    "# Create new DataFrame for resampled training data\n",
+    "train_labels_resampled = pd.DataFrame({'image': X_train_resampled, 'level': y_train_resampled})\n",
+    "test_labels = labels_df.iloc[test_idx] \n",
+    "\n",
+    "# Create dataset objects using the resampled labels\n",
+    "train_dataset = DRDataset(train_labels_resampled, '../data/train',\n",
+    "                          preproc=models.ResNet50_Weights.DEFAULT.transforms())\n",
+    "test_dataset = DRDataset(test_labels, '../data/train',\n",
+    "                         preproc=models.ResNet50_Weights.DEFAULT.transforms())\n",
+    "\n",
+    "# Further split the test set into validation and test\n",
+    "val_size = int(0.5 * len(test_dataset))\n",
+    "test_size = len(test_dataset) - val_size\n",
+    "val_dataset, test_dataset = torch.utils.data.random_split(test_dataset, [val_size, test_size])\n",
+    "\n",
+    "#Create DataLoaders\n",
     "train_loader = torch.utils.data.DataLoader(train_data, batch_size=BATCH_SIZE, shuffle=True)\n",
     "val_loader = torch.utils.data.DataLoader(val_data, batch_size=BATCH_SIZE, shuffle=False)\n",
     "test_loader = torch.utils.data.DataLoader(test_data, batch_size=BATCH_SIZE, shuffle=False)\n",
     "\n",
+    "#dataset size checks\n",
     "train_N = len(train_loader.dataset)\n",
     "val_N = len(val_loader.dataset)\n",
     "test_N = len(test_loader.dataset)\n",
@@ -62,14 +99,16 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "raw",
    "metadata": {},
    "source": [
     "# build model\n",
     "\n",
     "TODO:\n",
     "* more dense layers?\n",
-    "* different backbone (other than resnet)?"
+    "* different backbone (other than resnet)? Can change this for the project to include a hybrid CNN/Transformer model depending on if we want or need greater generalization, etc. \n",
+    "* can create weighted loss function \n",
+    "* can add class weights if SMOTE doesn't yield good results"
    ]
   },
   {
@@ -620,9 +659,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "pdac",
+   "display_name": "Python [conda env:base] *",
    "language": "python",
-   "name": "python3"
+   "name": "conda-base-py"
   },
   "language_info": {
    "codemirror_mode": {
@@ -634,9 +673,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.2"
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
