Added additional TODOs

--- a/src/transfer_learning.ipynb
+++ b/src/transfer_learning.ipynb
@@ -330,13 +330,14 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "raw",
    "metadata": {},
    "source": [
     "# train/val/test\n",
     "\n",
     "TODO:\n",
-    "* early stopping?"
+    "* early stopping?\n",
+    "* potentially modify loss function after assessing baseline"
    ]
   },
   {
