updated readme, used random oversampling instead of smote (smote requires image features which may be too big to load, at least before preprocessing, fix WIP)

--- a/src/transfer_learning.ipynb
+++ b/src/transfer_learning.ipynb
@@ -13,16 +13,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(70, 10, 20)"
+       "(90335, 3512, 7026)"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 71,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -34,7 +34,7 @@
     "from torchvision import models\n",
     "from utils import DRDataset\n",
     "from sklearn.model_selection import train_test_split\n",
-    "from imblearn.over_sampling import SMOTE\n",
+    "from imblearn.over_sampling import SMOTE, RandomOverSampler\n",
     "import numpy as np\n",
     "\n",
     "DESC = 'resnet'\n",
@@ -42,48 +42,35 @@
     "    os.makedirs(f'../results/{DESC}')\n",
     "    \n",
     "#load labels\n",
-    "labels = pd.read_csv('../data/trainLabels.csv').head(100)\n",
+    "labels = pd.read_csv('../data/trainLabels.csv')\n",
     "\n",
     "NUM_CLASSES = len(labels['level'].unique())\n",
     "LABELS_MAP = ['0-No DR', '1-Mild', '2-Moderate', '3-Severe', '4-Proliferative DR']\n",
     "BATCH_SIZE = 32\n",
     "\n",
-    "#load dataset\n",
-    "dataset = DRDataset(labels, '../data/train',\n",
-    "                         preproc=models.ResNet50_Weights.DEFAULT.transforms())\n",
+    "# split into train/val/test using stratified sampling (70/10/20)\n",
+    "# TODO --> use torch to split all at once?\n",
+    "labels_train, labels_test = train_test_split(labels, test_size=0.3, stratify=labels['level'], random_state=42)\n",
+    "labels_val, labels_test = train_test_split(labels_test, test_size=2/3, stratify=labels_test['level'], random_state=42)\n",
     "\n",
-    "#Map labels with dataset images \n",
-    "image_paths = labels_df['image'].values  # TODO check that csv has \"image\" or update with appropriate labeling\n",
-    "labels = labels_df['level'].values       # Target labels\n",
+    "# # Apply SMOTE on the training labels (to balance classes) --> will not work on img path strings\n",
+    "# # TODO: consider using image embeddings or data augmentation\n",
+    "# smote = SMOTE(random_state=42)\n",
+    "# X_train_resampled, y_train_resampled = smote.fit_resample(labels_train['image'], labels_train['level'])\n",
     "\n",
-    "# split into train/val/test using stratified sampling \n",
-    "X_train, X_test, y_train, y_test, train_idx, test_idx = train_test_split(\n",
-    "    dataset, y, np.arange(len(image_ids)), test_size=0.3, stratify=y, random_state=42)\n",
-    "\n",
-    "#train_data, val_data, test_data = torch.utils.data.random_split(dataset, [0.7, 0.1, 0.2])\n",
-    "# max_workers = os.cpu_count() // 2\n",
-    "\n",
-    "# Apply SMOTE on the training labels (to balance classes)\n",
-    "smote = SMOTE(random_state=42)\n",
-    "X_train_resampled, y_train_resampled = smote.fit_resample(X_train.reshape(-1, 1), y_train)\n",
-    "\n",
-    "# Convert back to original format\n",
-    "X_train_resampled = X_train_resampled.flatten()\n",
-    "\n",
-    "# Create new DataFrame for resampled training data\n",
-    "train_labels_resampled = pd.DataFrame({'image': X_train_resampled, 'level': y_train_resampled})\n",
-    "test_labels = labels_df.iloc[test_idx] \n",
+    "# Resample using RandomOverSampler\n",
+    "ros = RandomOverSampler(random_state=42)\n",
+    "X_train_resampled, y_train_resampled = ros.fit_resample(labels_train[['image']], labels_train['level'])\n",
+    "labels_train_resampled = pd.DataFrame({'image': X_train_resampled['image'], 'level': y_train_resampled})\n",
     "\n",
     "# Create dataset objects using the resampled labels\n",
-    "train_dataset = DRDataset(train_labels_resampled, '../data/train',\n",
-    "                          preproc=models.ResNet50_Weights.DEFAULT.transforms())\n",
-    "test_dataset = DRDataset(test_labels, '../data/train',\n",
-    "                         preproc=models.ResNet50_Weights.DEFAULT.transforms())\n",
+    "train_data = DRDataset(labels_train_resampled, '../data/train',\n",
+    "                       preproc=models.ResNet50_Weights.DEFAULT.transforms())\n",
+    "val_data = DRDataset(labels_val, '../data/train',\n",
+    "                     preproc=models.ResNet50_Weights.DEFAULT.transforms())\n",
+    "test_data = DRDataset(labels_test, '../data/train',\n",
+    "                      preproc=models.ResNet50_Weights.DEFAULT.transforms())\n",
     "\n",
-    "# Further split the test set into validation and test\n",
-    "val_size = int(0.5 * len(test_dataset))\n",
-    "test_size = len(test_dataset) - val_size\n",
-    "val_dataset, test_dataset = torch.utils.data.random_split(test_dataset, [val_size, test_size])\n",
     "\n",
     "#Create DataLoaders\n",
     "train_loader = torch.utils.data.DataLoader(train_data, batch_size=BATCH_SIZE, shuffle=True)\n",
@@ -96,6 +83,74 @@
     "test_N = len(test_loader.dataset)\n",
     "\n",
     "train_N, val_N, test_N"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "before resampling\n",
+      "24588 3512 7026\n",
+      "0.6999943062119228 0.09998291863576837 0.20002277515230882\n",
+      "level\n",
+      "0    0.734789\n",
+      "1    0.069546\n",
+      "2    0.150643\n",
+      "3    0.024850\n",
+      "4    0.020172\n",
+      "Name: proportion, dtype: float64 level\n",
+      "0    0.734909\n",
+      "1    0.069476\n",
+      "2    0.150626\n",
+      "3    0.024772\n",
+      "4    0.020216\n",
+      "Name: proportion, dtype: float64 level\n",
+      "0    0.734700\n",
+      "1    0.069599\n",
+      "2    0.150726\n",
+      "3    0.024907\n",
+      "4    0.020068\n",
+      "Name: proportion, dtype: float64\n",
+      "\n",
+      "after resampling\n",
+      "90335 3512 7026\n",
+      "level\n",
+      "0    0.2\n",
+      "1    0.2\n",
+      "2    0.2\n",
+      "3    0.2\n",
+      "4    0.2\n",
+      "Name: proportion, dtype: float64 level\n",
+      "0    0.734909\n",
+      "1    0.069476\n",
+      "2    0.150626\n",
+      "3    0.024772\n",
+      "4    0.020216\n",
+      "Name: proportion, dtype: float64 level\n",
+      "0    0.734700\n",
+      "1    0.069599\n",
+      "2    0.150726\n",
+      "3    0.024907\n",
+      "4    0.020068\n",
+      "Name: proportion, dtype: float64\n"
+     ]
+    }
+   ],
+   "source": [
+    "# TODO: make this pretty\n",
+    "print('before resampling')\n",
+    "print(len(labels_train), len(labels_val), len(labels_test))\n",
+    "print(len(labels_train)/len(labels), len(labels_val)/len(labels), len(labels_test)/len(labels))\n",
+    "print(labels_train['level'].value_counts(normalize=True).sort_index(), labels_val['level'].value_counts(normalize=True).sort_index(), labels_test['level'].value_counts(normalize=True).sort_index())\n",
+    "print()\n",
+    "print('after resampling')\n",
+    "print(len(labels_train_resampled), len(labels_val), len(labels_test))\n",
+    "print(labels_train_resampled['level'].value_counts(normalize=True).sort_index(), labels_val['level'].value_counts(normalize=True).sort_index(), labels_test['level'].value_counts(normalize=True).sort_index())"
    ]
   },
   {
@@ -113,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [
     {
@@ -310,7 +365,7 @@
        "=========================================================================================="
       ]
      },
-     "execution_count": 2,
+     "execution_count": 73,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -342,7 +397,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -372,7 +427,7 @@
     "optimizer = torch.optim.Adam(resnet.parameters())\n",
     "\n",
     "# train\n",
-    "EPOCHS = 10\n",
+    "EPOCHS = 100\n",
     "train_losses = []\n",
     "val_losses = []\n",
     "train_accs = []\n",
@@ -660,9 +715,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:base] *",
+   "display_name": "dr",
    "language": "python",
-   "name": "conda-base-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -674,7 +729,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.7"
+   "version": "3.13.2"
   }
  },
  "nbformat": 4,
