updated test_results to include logits, updated evalute.ipynb for multiclass roc curve

--- a/src/resnet.ipynb
+++ b/src/resnet.ipynb
@@ -656,18 +656,22 @@
    "source": [
     "# test set results (~15min/1s if images are loaded/not loaded in memory)\n",
     "resnet.eval()\n",
+    "\n",
     "y_true = []\n",
+    "y_logit = []\n",
     "y_pred = []\n",
     "with torch.no_grad():\n",
     "    for i, (inputs, labels) in enumerate(test_loader):\n",
     "        inputs, labels = inputs.to(DEVICE), labels.to(DEVICE)\n",
     "        outputs = resnet(inputs)\n",
     "        y_true.extend(labels.cpu().numpy())\n",
+    "        y_logit.extend(outputs.cpu().numpy())\n",
     "        y_pred.extend(torch.softmax(outputs, dim=1).argmax(dim=1).cpu().numpy())\n",
     "\n",
     "y_true = np.array(y_true)\n",
+    "y_logit = np.array(y_logit)\n",
     "y_pred = np.array(y_pred)\n",
-    "np.savez(f'../results/{DESC}/test_results.npz', y_true=y_true, y_pred=y_pred)"
+    "np.savez(f'../results/{DESC}/test_results.npz', y_true=y_true, y_logit=y_logit, y_pred=y_pred)"
    ]
   },
   {
